--- a/style.css
+++ b/style.css
@@ -1,80 +1,68 @@
-*
-{
+* {
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
 }
 
-.header
-{
+.header {
     height: 4rem;
     padding: 2rem;
     font-size: larger;
     font-weight: 300;
     display: flex;
     align-items: center;
-    font-family:'Times New Roman', Times, serif;
+    font-family: 'Times New Roman', Times, serif;
     background-color: rgb(190, 188, 189);
 }
-form
-{
-   
+
+form {
+
     height: 89.5vh;
 }
-select
-{
+
+select {
     width: 40rem;
     height: 2rem;
     border-radius: 7px;
     padding: 0.3rem;
 }
 
-label
-{
+label {
     margin-bottom: 0.5rem;
     resize: vertical;
     font-weight: 600;
-    font-family:'Times New Roman', Times, serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 
-.wrap
-{
+.wrap {
     display: flex;
     flex-direction: column;
 }
 
-.row1
-{
-   
+.row1 {
+
     height: 5rem;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding: 2rem;
+    /* flex-wrap: wrap; */
 
 }
-.row2 , .row3 , .row5 , .row6
-{
-    
+
+.row2, .row3, .row5, .row6 {
+
     height: 5rem;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
     padding: 2rem;
-    gap: 2rem;   
+    gap: 2rem;
 }
 
-.row2 input{
-    width: 20rem;
-    padding: 1rem;
-    height: 0rem;
-    border-radius: 7px;
-    border: 1px solid;
-    outline: none;
-}
-.row3 input{
+.row2 input {
     width: 20rem;
     padding: 1rem;
     height: 0rem;
@@ -83,27 +71,32 @@ label
     outline: none;
 }
 
-.row4
-{
-    
+.row3 input {
+    width: 20rem;
+    padding: 1rem;
+    height: 0rem;
+    border-radius: 7px;
+    border: 1px solid;
+    outline: none;
+}
+
+.row4 {
+
     margin-left: 2rem;
 }
 
-.row4 textarea
-{
-    width:50.5%;
+.row4 textarea {
+    width: 50.5%;
     height: 4rem;
     border-radius: 7px;
     padding: 0.7rem;
 }
 
-.row5 select
-{
+.row5 select {
     width: 20rem;
 }
 
-.row5 input
-{
+.row5 input {
     width: 20rem;
     padding: 1rem;
     height: 0rem;
@@ -112,8 +105,7 @@ label
     outline: none;
 }
 
-.row6 input
-{
+.row6 input {
     width: 20rem;
     padding: 1rem;
     height: 0rem;
@@ -121,25 +113,23 @@ label
     border: 1px solid;
     outline: none;
 }
-::placeholder
-{
-    font-size:medium;
-    font-family:'Times New Roman', Times, serif;
+
+::placeholder {
+    font-size: medium;
+    font-family: 'Times New Roman', Times, serif;
 }
 
-select
-{
+select {
     border: 1px solid rgb(76, 76, 76);
     outline: none;
 }
 
-input
-{
+input {
     font-family: 'Times New Roman', Times, serif;
-    
+
 }
 
-.btn{
+.btn {
     display: flex;
     justify-content: flex-end;
     margin: 2rem;
@@ -147,19 +137,73 @@ input
     align-items: center;
 }
 
-.btn button
-{
+.btn button {
     border-radius: 7px;
     padding: 1rem;
     border: none;
     outline: none;
-    cursor:pointer;
+    cursor: pointer;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 700;
     background-color: rgb(190, 188, 189);
 }
 
-button:hover
+button:hover {
+    background-color: grey;
+}
+
+/* Media Queries for Responsive Design */
+@media (max-width: 768px) {
+
+    .header
+    {
+       display: flex;
+       justify-content: center;
+       align-items: center;
+    }
+  
+    form
+    {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        padding: 2rem;
+    }
+
+    .row1 , .row2,.row3,.row4,.row5,.row6{
+        display: flex;
+        flex-direction: column;
+        justify-content:space-evenly;
+        align-items: center;
+        height: max-content;
+       
+    
+    }
+
+     .row1 select
+     {
+        width: 20rem;
+     }
+
+ .row1 .wrap2 
 {
-    background-color:grey;
+    margin-top: 3rem;
+}
+    
+.row4
+{
+    display: flex;
+    justify-content: flex-start;
+
+    width: 100%;
+    margin-right: 2rem;
+}
+    .row4 textarea
+    {
+        width: 20rem;
+        
+    }
+
+
 }
